--- a/server/public/styles/_experiences.scss
+++ b/server/public/styles/_experiences.scss
@@ -12,7 +12,6 @@ div.experiences-background {
   -o-background-size: cover;
   width: 100%;
   height: 80vh;
-  margin: auto;
   padding:0;
 }
 
@@ -22,6 +21,9 @@ div.experiences-background {
   -webkit-background-atachment:fixed;
   -moz-background-atachment:fixed;
   -o-background-atachment: fixed;
+  background-position:center center;
+ -moz-background-position:center center;
+ -webkit-background-position:center center;
 }
 
 
