--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -62,7 +62,6 @@ div.experiences-background {
   -o-background-size: cover;
   width: 100%;
   height: 80vh;
-  margin: auto;
   padding: 0;
 }
 
@@ -71,6 +70,9 @@ div.experiences-background {
   -webkit-background-atachment: fixed;
   -moz-background-atachment: fixed;
   -o-background-atachment: fixed;
+  background-position: center center;
+  -moz-background-position: center center;
+  -webkit-background-position: center center;
 }
 
 section#experiences {
@@ -916,17 +918,16 @@ section#experiences {
 }
 
 div.contact-background {
-  background: url("../images/mountains.jpg") fixed no-repeat;
+  background: url("../images/mountains.jpg") no-repeat center center;
   background-position: center center;
   -moz-background-position: center center;
   -webkit-background-position: center center;
   background-size: cover;
   -moz-background-size: cover;
   -webkit-background-size: cover;
-  -o-background-size: cover center;
+  -o-background-size: cover;
   width: 100%;
   height: 80vh;
-  margin: auto;
   padding: 0;
 }
 
